# Arboria

./: CMakeLists.txt  CMakeSettings.json  README.md  README_Hotkeys.md  README_design.md
assets/shader/: baseSurfaceShader.frag  baseSurfaceShader.vert  coloredPrimitiveShader.frag  coloredPrimitiveShader.vert  spriteShader.frag  spriteShader.vert  textRenderShader.frag  textRenderShader.vert
cmake/: FindGLEW.cmake  FindHarfBuzz.cmake
config/: inputbindings.txt  inputs.ini  user.ini
guis/: mainmenu.gui  optionsmenu.gui
src/: Arboria.cpp  Arboria.h  CMakeLists.txt  FileSystem.cpp  FileSystem.h  Heap.cpp  Heap.h  definitions.h  globals.h  main.cpp
src/containers/: Deque.h  HashIndex.cpp  HashIndex.h  HashTable.h  List.h  Queue.h  RingBuffer.h  Stack.h
src/events/: Event.cpp  Event.h
src/framework/: ActionManager.cpp  ActionManager.h  CVariableSystem.cpp  CVariableSystem.h  Camera.cpp  Camera.h  CommandArgs.cpp  CommandArgs.h  CommandSystem.h  ConfigOptions.h  Engine.cpp  Engine.h  Exception.h  InputActionType.h  InputBindings.cpp  InputBindings.h  InputManager.cpp  InputManager.h  Lexer.cpp  Lexer.h  RenderDevice.cpp  RenderDevice.h  ResourceManager.cpp  ResourceManager.h  ResourceObject.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h  Session.cpp  Session.h  Session_menu.cpp  String.cpp  String.h  SystemCVars.cpp  SystemCVars.h  Timer.h  Token.cpp  (+3 more)
src/game/scenes/: MainMenu.cpp  MainMenu.h  OptionsMenu.cpp  OptionsMenu.h
src/gui/: ButtonWidget.cpp  ButtonWidget.h  Graphic.cpp  Graphic.h  GraphicButton.cpp  GraphicButton.h  Label.cpp  Label.h  ListBoxWidget.cpp  ListBoxWidget.h  ScrollAreaWidget.cpp  ScrollAreaWidget.h  ScrollbarWidget.cpp  ScrollbarWidget.h  SliderWidget.cpp  SliderWidget.h  Spinner.cpp  Spinner.h  TextButton.cpp  TextButton.h  Widget.cpp  Widget.h  WidgetContainer.cpp  WidgetContainer.h  WidgetEnums.h  Window.cpp  Window.h
src/renderer/: Atlas.cpp  Atlas.h  CodepointView.h  ColoredPrimitiveShader.cpp  ColoredPrimitiveShader.h  DrawColoredPrimitiveShader.cpp  DrawColoredPrimitiveShader.h  DrawLock.h  DrawSpriteCommand.h  DrawSurfaceShader.cpp  DrawSurfaceShader.h  DrawTextShader.cpp  DrawTextShader.h  Drawing.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FrameBuffer.cpp  FrameBuffer.h  GlyphAtlas.cpp  GlyphAtlas.h  IDrawContext.h  IDrawEngine.h  Palette.cpp  Palette.h  RenderData.cpp  RenderData.h  RenderSystem.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SpriteBuffer.cpp  SpriteBuffer.h  SpriteShader.cpp  SpriteShader.h  TextRenderer.cpp  (+6 more)
src/renderer/OpenGL/: FrameBuffer.cpp  FrameBuffer.h  OpenGLApi.cpp  OpenGLApi.h  ShaderProgram.cpp  ShaderProgram.h  SwapFramebuffer.h
src/renderer/shader/: baseSurfaceShader.frag  baseSurfaceShader.vert  textRenderShader.frag  textRenderShader.vert
src/utils/: Color.cpp  Color.h  Numerics.h  Rectangle.cpp  Rectangle.h  Vector.h  check_static_cast.h  combine_hash.h  math.h
